--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "14_mvc_mysql_practice",
+    "name": "moving",
     "version": "1.0.0",
     "description": "",
     "main": "index.js",
