--- a/config/config.json
+++ b/config/config.json
@@ -1,8 +1,8 @@
 {
   "development": {
-    "username": "root",
-    "password": null,
-    "database": "database_development",
+    "username": "aymrm",
+    "password": "1234",
+    "database": "kdt9",
     "host": "127.0.0.1",
     "dialect": "mysql"
   },
