--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
     "description": "",
     "main": "index.js",
     "scripts": {
-        "start": "node index.js",
+        "start": "cross-env NODE_ENV=development node index.js",
         "product": "cross-env NODE_ENV=aaaaaaaa node index.js",
-        "test": "echo \"Error: no test specified\" && exit 1"
+        "test": "cross-env NODE_ENV=test node index.js"
     },
     "keywords": [],
     "author": "",
