--- a/config/config.json
+++ b/config/config.json
@@ -1,15 +1,15 @@
 {
   "development": {
-    "username": "eukkki",
-    "password": "Inter!0719",
-    "database": "kdt9",
+    "username": "root",
+    "password": "159753",
+    "database": "moving",
     "host": "127.0.0.1",
     "dialect": "mysql"
   },
   "test": {
-    "username": "eukkki",
-    "password": "Inter!0719",
-    "database": "kdt9",
+    "username": "root",
+    "password": "159753",
+    "database": "moving",
     "host": "127.0.0.1",
     "dialect": "mysql"
   },
