--- a/config/config.json
+++ b/config/config.json
@@ -7,9 +7,9 @@
     "dialect": "mysql"
   },
   "test": {
-    "username": "root",
-    "password": "159753",
-    "database": "moving",
+    "username": "eukkki",
+    "password": "Inter!0719",
+    "database": "kdt9",
     "host": "127.0.0.1",
     "dialect": "mysql"
   },
