--- a/package.json
+++ b/package.json
@@ -1,31 +1,32 @@
 {
-    "name": "moving",
-    "version": "1.0.0",
-    "description": "",
-    "main": "index.js",
-    "scripts": {
-        "start": "cross-env NODE_ENV=development nodemon index.js",
-        "test": "cross-env NODE_ENV=test nodemon index.js",
-        "product": "cross-env NODE_ENV=production nodemon index.js"
-    },
-    "keywords": [],
-    "author": "",
-    "license": "ISC",
-    "dependencies": {
-        "axios": "^1.5.0",
-        "bcrypt": "^5.1.1",
-        "cookie-parser": "^1.4.6",
-        "cross-env": "^7.0.3",
-        "ejs": "^3.1.9",
-        "express": "^4.18.2",
-        "express-session": "^1.17.3",
-        "jsonwebtoken": "^9.0.1",
-        "mysql": "^2.18.1",
-        "mysql2": "^3.6.0",
-        "nodemailer": "^6.9.5",
-        "sequelize": "^6.32.1",
-        "sequelize-cli": "^6.6.1",
-        "socket.io": "^4.7.2",
-        "ws": "^8.13.0"
-    }
+  "name": "moving",
+  "version": "1.0.0",
+  "main": "index.js",
+  "scripts": {
+    "start": "cross-env NODE_ENV=development nodemon index.js",
+    "test": "cross-env NODE_ENV=test nodemon index.js",
+    "product": "cross-env NODE_ENV=production nodemon index.js"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "dependencies": {
+    "axios": "^1.5.0",
+    "bcrypt": "^5.1.1",
+    "cookie-parser": "^1.4.6",
+    "cross-env": "^7.0.3",
+    "ejs": "^3.1.9",
+    "express": "^4.18.2",
+    "express-session": "^1.17.3",
+    "jsonwebtoken": "^9.0.1",
+    "mysql": "^2.18.1",
+    "mysql2": "^3.6.0",
+    "nodemailer": "^6.9.5",
+    "sequelize": "^6.32.1",
+    "sequelize-cli": "^6.6.1",
+    "socket.io": "^4.7.2",
+    "ws": "^8.13.0"
+  },
+  "devDependencies": {},
+  "description": ""
 }
