--- a/config/config.json
+++ b/config/config.json
@@ -1,8 +1,8 @@
 {
   "development": {
-    "username": "newuser",
-    "password": "2230",
-    "database": "kdt9",
+    "username": "root",
+    "password": "root",
+    "database": "test2",
     "host": "127.0.0.1",
     "dialect": "mysql"
   },
