--- a/config/config.json
+++ b/config/config.json
@@ -1,7 +1,7 @@
 {
   "development": {
-    "username": "root",
-    "password": "root",
+    "username": "justin",
+    "password": "",
     "database": "test2",
     "host": "127.0.0.1",
     "dialect": "mysql"
