사소한 수정 및  아이디 찾기 페이지 구현

--- a/config/config.json
+++ b/config/config.json
@@ -1,8 +1,8 @@
 {
   "development": {
-    "username": "newuser",
-    "password": "2230",
-    "database": "kdt9",
+    "username": "root",
+    "password": "159753",
+    "database": "moving",
     "host": "127.0.0.1",
     "dialect": "mysql"
   },
