--- a/config/config.json
+++ b/config/config.json
@@ -1,8 +1,8 @@
 {
   "development": {
-    "username": "root",
-    "password": "159753",
-    "database": "moving",
+    "username": "newuser",
+    "password": "2230",
+    "database": "kdt9",
     "host": "127.0.0.1",
     "dialect": "mysql"
   },
