--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "start": "cross-env NODE_ENV=development nodemon index.js",
     "test": "cross-env NODE_ENV=test nodemon index.js",
-    "product": "cross-env NODE_ENV=production nodemon index.js"
+    "product": "cross-env NODE_ENV=production node index"
   },
   "keywords": [],
   "author": "",
