--- a/package.json
+++ b/package.json
@@ -3,9 +3,7 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "start": "cross-env NODE_ENV=development nodemon index.js",
-    "test": "cross-env NODE_ENV=test nodemon index.js",
-    "product": "cross-env NODE_ENV=production node index"
+    "start": "nodemon index.js"
   },
   "keywords": [],
   "author": "",
@@ -16,6 +14,7 @@
     "bcrypt": "^5.1.1",
     "cookie-parser": "^1.4.6",
     "cross-env": "^7.0.3",
+    "dotenv": "^16.3.1",
     "ejs": "^3.1.9",
     "express": "^4.18.2",
     "express-session": "^1.17.3",
@@ -29,6 +28,5 @@
     "socket.io": "^4.7.2",
     "ws": "^8.13.0"
   },
-  "devDependencies": {},
   "description": ""
 }
