--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "mysql": "^2.18.1",
     "mysql2": "^3.6.0",
     "nodemailer": "^6.9.5",
+    "nodemon": "^3.0.1",
     "sequelize": "^6.32.1",
     "sequelize-cli": "^6.6.1",
     "socket.io": "^4.7.2",
